--- a/25_webapp/webapp/views/home.html
+++ b/25_webapp/webapp/views/home.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social</title>
     <link rel="stylesheet" href="/assets/css/bootstrap.css">
+
+    {{ template "estilo" }}
 </head>
 
 <body>
@@ -35,14 +37,12 @@
             </div>
             <div class="col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-7">
                 <!-- Publicações -->
-                {{ range . }}
-                <div class="jumbotron">
-                    <h1 class="display-4">{{ .Titulo }}</h1>
-                    <p class="lead">{{ .Conteudo }}</p>
-                    <a href="#">{{ .AutorNick }} - {{ .CriadaEm }}</a>
-                    <hr class="my-4">
-                    <p>Ações</p>
-                </div>
+                {{ range .Publicacoes }}
+                    {{ if (eq .AutorId $.UsuarioId) }}
+                        {{ template "publicacao-com-permissao" . }}
+                    {{ else }}
+                        {{ template "publicacao-sem-permissao" . }}
+                    {{ end }}
                 {{ end }}
             </div>
         </div>
@@ -50,6 +50,7 @@
 
     {{ template "rodape" }}
     {{ template "scripts" }}
+    <script type="text/javascript" src="/assets/js/publicacoes.js"></script>
 </body>
 
 </html>
