Aplicação WEB: Atualizar publicação

--- a/25_webapp/webapp/views/templates/publicacoes.html
+++ b/25_webapp/webapp/views/templates/publicacoes.html
@@ -1,5 +1,5 @@
 {{ define "editar" }}
-    <a href="/editar" style="text-decoration: none;">
+    <a href="/publicacoes/{{ .Id }}/atualizar" style="text-decoration: none;">
         <i class="bi bi-pencil-square"></i>
     </a>
 {{ end }}
