Aplicação WEB: Excluir publicação e lib JS SweetAlert2

--- a/25_webapp/webapp/views/cadastro.html
+++ b/25_webapp/webapp/views/cadastro.html
@@ -33,7 +33,7 @@
                 </form>
             </div>
         </div>
-        <script type="text/javascript" src="/assets/js/jquery-3.6.1.min.js"></script>
+        {{ template "scripts" }}
         <script type="text/javascript" src="/assets/js/cadastro.js"></script>
     </body>
 </html>
