--- a/25_webapp/webapp/views/login.html
+++ b/25_webapp/webapp/views/login.html
@@ -24,7 +24,7 @@
                 </form>
             </div>
         </div>
-        <script type="text/javascript" src="/assets/js/jquery-3.6.1.min.js"></script>
+        {{ template "scripts" }}
         <script type="text/javascript" src="/assets/js/login.js"></script>
     </body>
 </html>
