Aplicação WEB: Logout

--- a/25_webapp/webapp/views/templates/cabecalho.html
+++ b/25_webapp/webapp/views/templates/cabecalho.html
@@ -23,7 +23,7 @@
         </ul>
 
         <span class="navbar-text p-0">
-            <a href="/logout">Sair</a>
+            <a href="/logout">Sair <i class="bi bi-power"></i></a>
         </span>
     </div>
 </nav>
