--- a/25_webapp/webapp/views/usuario.html
+++ b/25_webapp/webapp/views/usuario.html
@@ -34,13 +34,13 @@
                         </h6>
 
                         <p class="card-text">
-                            <a href="#">
+                            <a href="#" data-toggle="modal" data-target="#modal-seguidores">
                                 Seguidores: {{ len .Usuario.Seguidores }}
                             </a>
                         </p>
 
                         <p class="card-text">
-                            <a href="#">
+                            <a href="#" data-toggle="modal" data-target="#modal-seguindo">
                                 Seguindo: {{ len .Usuario.Seguindo }}
                             </a>
                         </p>
@@ -82,6 +82,8 @@
         </div>
     </div>
 
+    {{ template "modal-seguidores" .Usuario }}
+    {{ template "modal-seguindo" .Usuario }}
     {{ template "rodape" }}
     {{ template "scripts" }}
     <script type="text/javascript" src="/assets/js/publicacoes.js"></script>
