Aplicação WEB: Perfil e atualização dos dados do usuário

--- a/25_webapp/webapp/views/atualizar-publicacao.html
+++ b/25_webapp/webapp/views/atualizar-publicacao.html
@@ -42,6 +42,6 @@
 
     {{ template "rodape" }}
     {{ template "scripts" }}
-    <script type="text/javascript" src="/assets/js/publicacoes.js"></script>
+    <script src="/assets/js/publicacoes.js"></script>
 </body>
 </html>
