--- a/25_webapp/webapp/views/cadastro.html
+++ b/25_webapp/webapp/views/cadastro.html
@@ -34,6 +34,6 @@
             </div>
         </div>
         {{ template "scripts" }}
-        <script type="text/javascript" src="/assets/js/cadastro.js"></script>
+        <script src="/assets/js/cadastro.js"></script>
     </body>
 </html>
