--- a/25_webapp/webapp/views/templates/scripts.html
+++ b/25_webapp/webapp/views/templates/scripts.html
@@ -1,5 +1,5 @@
 {{ define "scripts" }}
-<script type="text/javascript" src="/assets/js/jquery-3.6.1.min.js"></script>
-<script type="text/javascript" src="/assets/js/bootstrap.js"></script>
-<script type="text/javascript" src="/assets/js/sweetalert2.all.min.js"></script>
+<script src="/assets/js/jquery-3.6.1.min.js"></script>
+<script src="/assets/js/bootstrap.js"></script>
+<script src="/assets/js/sweetalert2.all.min.js"></script>
 {{ end }}
