--- a/25_webapp/webapp/views/home.html
+++ b/25_webapp/webapp/views/home.html
@@ -50,7 +50,7 @@
 
     {{ template "rodape" }}
     {{ template "scripts" }}
-    <script type="text/javascript" src="/assets/js/publicacoes.js"></script>
+    <script src="/assets/js/publicacoes.js"></script>
 </body>
 
 </html>
