--- a/25_webapp/webapp/views/login.html
+++ b/25_webapp/webapp/views/login.html
@@ -25,6 +25,6 @@
             </div>
         </div>
         {{ template "scripts" }}
-        <script type="text/javascript" src="/assets/js/login.js"></script>
+        <script src="/assets/js/login.js"></script>
     </body>
 </html>
