--- a/25_webapp/webapp/views/templates/publicacoes.html
+++ b/25_webapp/webapp/views/templates/publicacoes.html
@@ -20,7 +20,7 @@
         Jan 2 15:04:05 2006
         1   2 3  4  5  6
     -->
-    <a href="#">{{ .AutorNick }} - {{ .CriadaEm.Format "02/01/2006 3:4" }}</a>
+    <a href="/usuarios/{{ .AutorId }}">{{ .AutorNick }} - {{ .CriadaEm.Format "02/01/2006 3:4" }}</a>
     <hr class="my-4">
 {{ end }}
 
