Aplicação WEB: Atualizar senha e deletar usuário

--- a/25_webapp/webapp/views/perfil.html
+++ b/25_webapp/webapp/views/perfil.html
@@ -45,6 +45,10 @@
                                 <a href="/atualizar-senha" class="card-link btn btn-info">
                                     Atualizar Senha
                                 </a>
+
+                                <a href="#" id="deletar-usuario" class="card-link btn btn-danger float-right">
+                                    Excluir Conta Permanentemente
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -79,6 +83,7 @@
     {{ template "rodape" }}
     {{ template "scripts" }}
     <script src="/assets/js/publicacoes.js"></script>
+    <script src="/assets/js/usuario.js"></script>
 </body>
 
 </html>
